<resources>
    <string name="app_name">UserStoryApp</string>
    <string name="lorem">Lorem ipsum dolor sit amet</string>
    <string name="img_story">Image Story</string>
    <string name="back">Back</string>
    <string name="title_bar">User Story</string>
    <string name="person">Person</string>
    <string name="dummy_id">dsadgegefac434234dsdsa</string>
    <string name="dummy_name">Arin Wibowo</string>
    <string name="dummy_date">24–05–2022</string>
    <string name="add">Add</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="clear">Clear</string>

    <string name="appwidget_text" translatable="true">Story Banner</string>
    <string name="empty_text" translatable="true">No Story Saved</string>
    <string name="add_widget" translatable="true">Add widget</string>
    <string name="app_widget_description" translatable="true">This is an app widget description</string>
    <string name="text_continue_login" translatable="true">Login to continue</string>
    <string name="text_continue_register" translatable="true">Register to continue</string>
    <string name="hint_email" translatable="true">Input your email</string>
    <string name="hint_username" translatable="true">Input your username</string>
    <string name="error_email" translatable="true">Input your email correctly</string>
    <string name="error_password" translatable="true">Input your password correctly</string>
    <string name="error_username" translatable="true">Input your name correctly</string>
    <string name="error_password_length" translatable="true">Password length must be more than 6 characters</string>
    <string name="hint_password" translatable="true">Input your password</string>
    <string name="not_registered" translatable="true">Dont have an account?</string>
    <string name="not_logged" translatable="true">Already have an account?</string>
    <string name="register_here" translatable="true"><u>Register here</u></string>
    <string name="login_here" translatable="true">Login here</string>
    <string name="login" translatable="true">Login</string>
    <string name="register" translatable="true">Register</string>
    <string name="detail_story" translatable="true">Story Detail</string>
    <string name="maps_story" translatable="true">Story Maps</string>
    <string name="add_story" translatable="true">Add Story</string>
    <string name="location_story" translatable="true">Put my current location</string>
    <string name="upload" translatable="true">Upload</string>
    <string name="camera" translatable="true">Camera</string>
    <string name="gallery" translatable="true">Gallery</string>
    <string name="saved_story" translatable="true">Story Saved</string>
    <string name="profile" translatable="true">Profile</string>
    <string name="language" translatable="true">Languages</string>
    <string name="change_language" translatable="true">Change Language</string>
    <string name="click_exit" translatable="true">Click back again to exit</string>
    <string name="bookmark" translatable="true">Bookmark</string>
    <string name="maps" translatable="true">Maps</string>
    <string name="added_favorite" translatable="true">Added to Bookmark!</string>
    <string name="deleted_favorite" translatable="true">Deleted from Bookmark!</string>
    <string name="dialog_clear" translatable="true">Clear bookmark story?</string>
    <string name="yes" translatable="true">Yes</string>
    <string name="no" translatable="true">No</string>
    <string name="dialog_logout" translatable="true">Logout account? (You need to login again)</string>
    <string name="logout" translatable="true">Logout</string>
    <string name="normal_type" translatable="true">Normal</string>
    <string name="satellite_type" translatable="true">Satellite</string>
    <string name="terrain_type" translatable="true">Terrain</string>
    <string name="hybrid_type" translatable="true">Hybrid</string>
    <string name="retry" translatable="true">Retry</string>
</resources>