<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">

    <View
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/colorBlueSky"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/title_bar"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/action_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_maps"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_maps"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/maps"
        app:layout_constraintBottom_toBottomOf="@+id/action_bar"
        app:layout_constraintEnd_toStartOf="@+id/btn_bookmark"
        app:layout_constraintTop_toTopOf="@+id/action_bar" />

    <ImageButton
        android:id="@+id/btn_bookmark"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_bookmark"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/bookmark"
        app:layout_constraintBottom_toBottomOf="@+id/action_bar"
        app:layout_constraintEnd_toStartOf="@+id/btn_profile"
        app:layout_constraintTop_toTopOf="@+id/action_bar" />

    <ImageButton
        android:id="@+id/btn_profile"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/profile"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_profile"
        app:layout_constraintBottom_toBottomOf="@+id/action_bar"
        app:layout_constraintEnd_toEndOf="@+id/action_bar"
        app:layout_constraintTop_toTopOf="@+id/action_bar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_story"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_bar"
        tools:listitem="@layout/item_story" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_plus"
        app:tint="@color/white"
        android:layout_margin="32dp"
        android:backgroundTint="@color/colorBlueSky"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/add" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>