<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.DetailActivity">

    <View
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/colorBlueSky"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/back"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/action_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/action_bar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/detail_story"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/action_bar"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_picture"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:transitionName="image"
        android:scaleType="fitXY"
        android:contentDescription="@string/img_story"
        app:layout_constraintTop_toBottomOf="@id/action_bar"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/dummy_name"
        android:textColor="@color/color_black_light"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_picture" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/dummy_date"
        android:textColor="@color/color_black_light"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_name" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:overScrollMode="never"
        android:layout_margin="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name">

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/color_black_light"
            android:textSize="12sp"
            android:text="@string/lorem"
            android:transitionName="desc" />

    </ScrollView>

    <com.github.ivbaranov.mfb.MaterialFavoriteButton
        android:id="@+id/btn_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/action_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:mfb_animate_favorite="true"
        app:mfb_animate_unfavorite="false"
        app:mfb_bounce_duration="300"
        app:mfb_padding="12"
        app:mfb_rotation_angle="360"
        app:mfb_rotation_duration="400"
        app:mfb_size="48"
        app:mfb_type="star" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>